Update classes